[Bug Fixed] [36] new user validation: 'limitar textboxs'

--- a/app/views/ads/_form.html.erb
+++ b/app/views/ads/_form.html.erb
@@ -149,3 +149,7 @@
       <%= f.submit "Publicar Anúncio", :class=>"btn btn-primary" %>
     </div>
 <% end %>
+
+<% if @user.errors.any? %>
+    <%= render "layouts/error_message" %>
+<% end %>
