[Update Feature] Add column rapid_description to academy_tutorial

--- a/app/assets/javascripts/bootstrap-wysihtml5/core.js.erb
+++ b/app/assets/javascripts/bootstrap-wysihtml5/core.js.erb
@@ -76,7 +76,7 @@
                   "<input value='http://' class='bootstrap-wysihtml5-insert-image-url input-xlarge'>" +
                 "</div>" +
                 "<div class='modal-body'>" +
-                "<button class='btn btn-success' value='Upload Imagem'>" +  
+                "  <input type='file' name='pic' accept='image/*>" +  
                 "</div>" +
                 "<div class='modal-footer'>" +
                   "<a href='#' class='btn' data-dismiss='modal'>" + locale.image.cancel + "</a>" +
