--- a/app/views/academy/tutorials/index.html.erb
+++ b/app/views/academy/tutorials/index.html.erb
@@ -1,6 +1,6 @@
-
+<div class="container">
     <% @academy_tutorials.each do |academy_tutorial| %>
-      <div class="col-lg-12">
+      <div class="col-xs-5">
       <section class="panel">
         <header class="panel-heading">
           <div class="pull-right">
@@ -19,14 +19,12 @@
         <%= academy_tutorial.aproved %>
         <%= academy_tutorial.title %>
         <%= academy_tutorial.rapid_description %>
-        <%= academy_tutorial.is_delected %>
-        <div class="pull-right">
-          <%= link_to 'Show', academy_tutorial ,:class => "label"%>
-          <%= link_to 'Edit', edit_academy_tutorial_path(academy_tutorial) %>
-          <%= link_to 'Destroy', academy_tutorial, method: :delete, data: { confirm: 'Are you sure?' } %>
-        </div>
+        <%= academy_tutorial.is_delected %><br>
+        <%= link_to 'Ver', academy_tutorial ,:class => "label pull-right",:style => "background-color:#91CAFF" %>
+        <%= link_to 'Editar', edit_academy_tutorial_path(academy_tutorial),:class => "label pull-right",:style => "background-color:#FFCC91" %>
       </section>
       </div>
     <% end %>
+</div>
 
-<%= link_to 'New Tutorial', new_academy_tutorial_path %>
+<%= link_to 'Criar tutorial', new_academy_tutorial_path %>
