--- a/app/assets/stylesheets/theme.css
+++ b/app/assets/stylesheets/theme.css
@@ -278,11 +278,22 @@ color:  #293a49;
 }
 
 /******THUMBNAILS**********/
+
+
+
 ul{
   list-style: none;
 }
 
-.thumbnail span {
+.thumbnail .label{
+ font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+}
+
+.thumbnail {
+ padding: 0px;
+}
+
+.price {
 display: block;
 background: #F3984D;
 position: absolute;
@@ -290,7 +301,6 @@ min-width: 20px;
 padding: 8px;
 color: white;
 font-size: 15px;
-opacity: 21;
 /*
 margin-left: 10px;
 margin-top: 10px;
@@ -300,39 +310,6 @@ margin-top: 10px;
 border-bottom-right-radius: 4px;
 }
 
-.price {
-  background: #F3984D;
-}
-
-
-
-/* pagina de login*/
-
-ul{
-  list-style: none;
-}
-
-.thumbnail span {
-display: block;
-background: #F3984D;
-position: absolute;
-min-width: 20px;
-padding: 8px;
-color: white;
-font-size: 15px;
-opacity: 21;
-/*
-margin-left: 10px;
-margin-top: 10px;
-*/
--webkit-border-bottom-right-radius: 4px;
--moz-border-radius-bottomright: 4px;
-border-bottom-right-radius: 4px;
-}
-
-.price {
-  background: #F3984D;
-}
 
 
 
