--- a/app/views/ads/show.html.erb
+++ b/app/views/ads/show.html.erb
@@ -238,7 +238,7 @@
             <div class="tab-content tasi-tab">
                 <!-- produtos relacionados -->
                 <div id="related" class="tab-pane active">
-                    <h4 class="pro-d-head">Produtos na mesma Area</h4>
+                   
                     <% @related_ads.each do |ad| %>
                         <li class="col-sm-3 col-md-3 thing <%= ad.category.name %>">
                             <div class="thumbnail" id="thumbnail_ad" style="padding: 0">
@@ -262,10 +262,10 @@
                           </li>
                     <% end %>
                 </div>
-                
+
                 <!-- ultimos visitados -->
-                <div id="last_viewed" class="tab-pane active">
-                    <h4 class="pro-d-head">Ultimos vistos</h4>
+                <div id="last_viewed" class="tab-pane">
+                    
                     <% @last_viewed.each do |ad| %>
                         <li class="col-sm-3 col-md-3 thing <%= ad.category.name %>">
                             <div class="thumbnail" id="thumbnail_ad" style="padding: 0">
