--- a/app/views/ads/index.html.erb
+++ b/app/views/ads/index.html.erb
@@ -19,7 +19,7 @@
       <% @ads.each do |ad| %>
         <div class="col-sm-6 col-md-4">
           <div class="thumbnail">
-            <% if !ad.is_active?  %> <!-- Verifica se o anúncio ainda está activo-->
+            <% if ad.is_active?  %> <!-- Verifica se o anúncio ainda está activo-->
                   <span class='price' ><%= ad.price %>€</span>
                     <%= link_to ad_image( ad.ad_images.first ), ad %>
                     <% if !ad.category.blank? %>
@@ -42,7 +42,7 @@
         <% if @ads.empty? %>
           Ainda não existem anuncios. Sê o primeiro a anunciar!
         <% end %>
-        
+
     </div>
   </div>
 </div>
