--- a/app/views/ads/show.html.erb
+++ b/app/views/ads/show.html.erb
@@ -266,28 +266,29 @@
                 <!-- ultimos visitados -->
                 <div id="last_viewed" class="tab-pane">
                     
+
+                   <div class="row">
                     <% @last_viewed.each do |ad| %>
-                        <li class="col-sm-3 col-md-3 thing <%= ad.category.name %>">
-                            <div class="thumbnail" id="thumbnail_ad" style="padding: 0">
-                              <span class='price' ><%= ad.price %>€</span>
-                              <div style="padding:4px" >
-                                <%= link_to ad_image( ad.ad_images.first ), ad %>
-                                <% if !ad.category.blank? %>
-                                  <div class="caption">
-                                    <% if ad.category.nil? %>
-                                      <span class="label" style="background-color: #888888">Desconhecido
-                                    <% else %>
-                                      <span class="label" style="background-color: #<%= ad.category.color %>"><%= ad.category.name %>
-                                    <% end %>
-                                      </span>
-                                <% end %>
-                                    <h2><%= link_to ad.title, ad %></h2>
+                      <div class="col-sm-3 col-md-3">
+                        <div class="thumbnail">
+                                <span class='price' ><%= ad.price %>€</span>
+                                  <%= link_to ad_image( ad.ad_images.first ), ad %>
+                                    <div class="caption">
+                                        <% if ad.category.nil? %>
+                                          <span class="label" style="background-color: #888888">Desconhecido
+                                        <% else %>
+                                          <span class="label" style="background-color: #<%= ad.category.color %>"><%= ad.category.name %>
+                                        <% end %>
+                                        </span>
+                                   
+                                    <h4><%= link_to ad.title, ad %></h4>
                                     <p><i class="fa fa-map-marker"></i> <%= ad.city.city unless ad.city.blank? %></p>
                                   </div>
-                              </div>
-                            </div>
-                          </li>
-                    <% end %>
+                          </div>
+                        </div>
+                      
+                      <% end %>
+                  </div><!--close row -->
                 </div>
 
                 <!-- reviews -->
