--- a/app/views/academy/answers/_form.html.erb
+++ b/app/views/academy/answers/_form.html.erb
@@ -6,7 +6,11 @@
             Respostas
         </header>
         <div class="panel-body">
-          <%= form_for(@academy_answer) do |f| %>
+
+          <%= form_for @academy_answer  ,:html => {
+                                                :id => "academy_answer",
+                                                :ajax_path => academy_answers_new_path
+                                          } do |f| %>
             <% if @academy_answer.errors.any? %>
               <div id="error_explanation">
                 <h2><%= pluralize(@academy_answer.errors.count, "error") %> prohibited this academy_answer from being saved:</h2>
@@ -24,7 +28,7 @@
             <div class="field">
             <%= f.text_area :text,:id => "text_comment",:rows=>5,:class=> "form-control counted" ,:placeholder => "Type in your message"%>
             </div>
-
+            
             <div class="field">
             <%= f.label :image_url %><br>
             <%= f.text_field :image_url %>
