--- a/app/views/academy/questions/show.html.erb
+++ b/app/views/academy/questions/show.html.erb
@@ -45,7 +45,7 @@
 
 <%#  Display all the answers  %>
 <div id="answers">
-  <%= render @answers %>
+  <%= render @academy_question.answers %>
 </div>
 
 <% if user_signed_in? %>
