--- a/app/views/academy/questions/index.html.erb
+++ b/app/views/academy/questions/index.html.erb
@@ -34,4 +34,37 @@
 </div>
 <br>
 
+
+
 <%= link_to 'Nova questão', new_academy_question_path %>
+<legend>Questoes em Thumnails( meter isto direito) </legend>
+
+<div class="row">
+       
+      <% @academy_questions.each do |academy_question| %>
+            <div class="col-sm-6 col-md-4">
+              <div class="thumbnail">
+
+                      <div class="col-xs-5 col-md-5"><%##  Avatar do user que fez a pergunta  ##%>
+                       <%= link_to (image_tag academy_question.user.avatar.url(:medium),:width => "100%",:class => "img-circle"), academy_question.user %>
+                    </div>
+
+                    <div class="col-xs-12 col-md-12 ">
+                      <%= academy_question.text %><%##  texto da pergunta  ##%>
+                     
+                    </div>
+                    
+                      <div class="caption">
+                            <span class="label label-info">
+                              <%= academy_question.category.name %>
+                          </span>
+                    
+                      <p><i class="fa fa-map-marker"></i> <%= academy_question.text %></p>
+                    </div>
+              </div>
+           </div>
+          <% end %>
+         
+       
+       
+    </div>
