[Bug Fix] Use name instead of username in Messages List

--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -45,7 +45,7 @@ No messages in your Inbox
                               <div class="chat-body clearfix">
                                   <div class="header">
                                         <strong class="primary-font">
-                                        <%= message.user.username %>
+                                        <%= message.user.name %>
                                       </strong> 
                                       <small class="pull-right text-muted">
                                           <span class="fa fa-time"></span><%= message.created_at %>
@@ -70,7 +70,7 @@ No messages in your Inbox
                                           <span class="fa fa-time"></span><%= message.created_at %>
                                       </small>
                                       <strong class="pull-right primary-font">
-                                        <%= message.user.username %>
+                                        <%= message.user.name %>
                                       </strong> 
                                   </div>
                                   <p>
