--- a/app/assets/stylesheets/admin_theme.css
+++ b/app/assets/stylesheets/admin_theme.css
@@ -1,6 +1,12 @@
 *{
   font-family: 'Raleway', sans-serif;
+}
 
+/**HEADER**/
+
+.admin-navbar{
+  background: #00A75D;
+  color:white;
 }
 /*Navigation*/
 .sidebar_nav_admin {
@@ -12,6 +18,7 @@
   margin: 0em;
   background: #2a3542;
 }
+
 .sidebar_nav_admin ul{
 }
 .sidebar_nav_admin i{
