--- a/app/views/layouts/_sidebar_right_ad.html.erb
+++ b/app/views/layouts/_sidebar_right_ad.html.erb
@@ -6,7 +6,7 @@
           <li style="margin-bottom:-25px;">
             <div class="thumbnail" style="padding: 0">
               <div style="padding:4px">
-                <img alt="300x200" style="width: 100%" src="http://placehold.it/100x40">
+                <img alt="Pub1" style="width: 100%" src="assets/pub1.png">
               </div>
             </div>
           </li>
@@ -14,7 +14,7 @@
           <li style="margin-bottom:-25px;">
             <div class="thumbnail" style="padding: 0">
               <div style="padding:4px">
-                <img alt="300x200" style="width: 100%" src="http://placehold.it/100x40">
+                <img alt="Pub2" style="width: 100%" src="hassets/pub2.png">
               </div>
             </div>
           </li>
@@ -22,7 +22,7 @@
           <li style="margin-bottom:-25px;">
             <div class="thumbnail" style="padding: 0">
               <div style="padding:4px">
-                <img alt="300x200" style="width: 100%" src="http://placehold.it/100x40">
+                <img alt="Pub3" style="width: 100%" src="http://placehold.it/100x40">
               </div>
             </div>
           </li>
