--- a/app/views/layouts/_sidebar_right_ad.html.erb
+++ b/app/views/layouts/_sidebar_right_ad.html.erb
@@ -6,7 +6,7 @@
           <li style="margin-bottom:-25px;">
             <div class="thumbnail" style="padding: 0">
               <div style="padding:4px">
-                <img alt="Pub1" style="width: 100%" src="assets/pub1.png">
+                <img alt="Pub1" style="width: 100%" src="assets/pub1.jpg">
               </div>
             </div>
           </li>
@@ -14,7 +14,7 @@
           <li style="margin-bottom:-25px;">
             <div class="thumbnail" style="padding: 0">
               <div style="padding:4px">
-                <img alt="Pub2" style="width: 100%" src="hassets/pub2.png">
+                <img alt="Pub2" style="width: 100%" src="assets/pub2.jpg">
               </div>
             </div>
           </li>
