--- a/app/views/layouts/_sidebar_left.html.erb
+++ b/app/views/layouts/_sidebar_left.html.erb
@@ -8,83 +8,142 @@
       <% if current_user.avatar.url != nil %>
       <%= image_tag current_user.avatar.url(:medium),:width => "70%",:class => "img-circle" %>
       <% else %>
-   
+
       <% end %>
     </div>
     <div class="row" style="margin-bottom:5px">
-      <div class="col-md-8"><b style="font-size: 15px"> <%= current_user.name  %></b></div>
+      <div class="col-md-8"><strong> <%= current_user.name  %></strong></div>
     </div>
 
 
 <% end -%>
 
+  <div class="panel-group" id="accordion">
+
     <% if user_signed_in? && (controller_name == 'ads' || (action_name=="myads")) %>
-    <% end %>
 
-
-    <div class="btn-group" style="width: 100%">
-      <a class="btn dropdown-toggle btn-info" data-toggle="dropdown" href="#" style="width: 100%">
-        Mercado
-        <span class="icon-shopping-cart"></span>
-      </a>
-      <ul class="dropdown-menu">
-        <li><%= link_to "Ver Todos".html_safe , ads_path %></li>
-        <% if user_signed_in? %>
+  <!-- MERCADO -->
+  <div class="panel panel-default">
+    <div class="panel-heading">
+      <h4 class="panel-title">
+        <a data-toggle="collapse" data-parent="#accordion" href="#collapseMercado">
+          Mercado
+        </a>
+      </h4>
+    </div>
+    <div id="collapseMercado" class="panel-collapse collapse in">
+      <div class="panel-body">
+        <ul>
+          <li><%= link_to "Ver Todos".html_safe , ads_path %></li>
             <li><%= link_to "Os Meus Anúncios".html_safe , myads_user_path(current_user.id) %></li>
             <li><%= link_to "Novo Anúncio".html_safe , new_ad_path %></li>
-        <% end %>
-      </ul>
+        </ul>
+      </div>
     </div>
+  </div>
 
-    <div class="btn-group" style="padding-bottom:5px;padding-top:5px;width: 100%">
-      <a class="btn dropdown-toggle btn-success" data-toggle="dropdown" href="#" style="width: 100%">
-        Eventos
-        <span class="icon-flag"></span>
-      </a>
-      <ul class="dropdown-menu">
-        <li><%= link_to "Ver Todos".html_safe, ads_path %></li>
+  <% else %>
+  <div class="panel panel-default">
+    <div class="panel-heading">
+      <h4 class="panel-title">
+          <%= link_to "Mercado".html_safe, ads_path %>
+      </h4>
+    </div>
+  </div>
+
+  <% end %>
+
+  <% if user_signed_in? %>
+
+  <!-- EVENTOS -->
+  <div class="panel panel-default">
+    <div class="panel-heading">
+      <h4 class="panel-title">
+        <a data-toggle="collapse" data-parent="#accordion" href="#collapseEventos">
+          Eventos
+        </a>
+      </h4>
+    </div>
+    <div id="collapseEventos" class="panel-collapse collapse">
+      <div class="panel-body">
+        <ul>
+          <li><%= link_to "Ver Todos".html_safe, ads_path %></li>
         <% if user_signed_in? %>
             <li><%= link_to "Os Meus Eventos".html_safe, ads_path %></li>
             <li><%= link_to "Novo Evento".html_safe, ads_path %></li>
         <% end %>
-      </ul>
+        </ul>
+      </div>
     </div>
+  </div>
 
-    <div class="btn-group" style="width: 100%">
-      <a class="btn dropdown-toggle btn-warning" data-toggle="dropdown" href="#" style="width: 100%">Academia
-        <span class=" icon-user"></span></a>
-      <ul class="dropdown-menu">
+  <% else %>
+  <div class="panel panel-default">
+    <div class="panel-heading">
+      <h4 class="panel-title">
+          <%= link_to "Eventos".html_safe, ads_path %>
+      </h4>
+    </div>
+  </div>
+
+  <% end %>
+
+  <% if user_signed_in? && controller_name=="academy" %>
+
+  <!-- ACADEMIA -->
+  <div class="panel panel-default">
+    <div class="panel-heading">
+      <h4 class="panel-title">
+        <a data-toggle="collapse" data-parent="#accordion" href="#collapseAcademia">
+          Academia
+        </a>
+      </h4>
+    </div>
+    <div id="collapseAcademia" class="panel-collapse collapse in">
+      <div class="panel-body">
+        <ul>
         <li><%= link_to "Entrar na Academia".html_safe, academy_path %></li>
-
         <li><%= link_to "Perguntas".html_safe, academy_questions_path %></li>
         <li><%= link_to "Tutoriais".html_safe, academy_tutorials_path%></li>
         <li><%= link_to "  Criar Tutorial".html_safe, new_academy_tutorial_path%></li>
         <li><%= link_to "workshops".html_safe, ads_path %></li>
-
-      </ul>
+        </ul>
+      </div>
     </div>
+  </div>
+
+  <% else %>
+  <div class="panel panel-default">
+    <div class="panel-heading">
+      <h4 class="panel-title">
+          <%= link_to "Academia".html_safe, academy_path %>
+      </h4>
+    </div>
+  </div>
+
+  <% end %>
+
+</div>
 
   </div>
 </div>
 
 <!-- Admin Acess-->
+<% if user_signed_in? %>
 <div class="panel panel-default">
   <div class="panel-body">
     <div>
-        <% if user_signed_in? %>
         <a class="btn dropdown-toggle btn-danger" href="/admin/ads" style="width: 100%;">Danger-Zone</a>
-        <% else %>
-            <%#= link_to html_safe , new_user_session_path %>
-        <% end %>
     </div>
   </div>
 </div>
+<% end %>
 
-<div class="panel panel-default">
-  <div class="panel-body">
 
     <!--Filtros-->
     <% if user_signed_in? && controller_name=="ads"%>
+    <div class="panel panel-default">
+  <div class="panel-body">
         <legend>Filtros</legend>
         <li>
           <a href="#collapseCategory" data-toggle="collapse" data-parent="#accordion">Categoria<b class="caret"></b></a>
@@ -122,8 +181,7 @@
             <%= submit_tag "Filtrar" %>
         <% end %>
         <!-- END FORMULARIO-->
+          </div>
+</div>
     <% end %>
     <!-- END FILTERS -->
-  </div>
-</div>
-
