--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -6,7 +6,7 @@
                            <%= devise_error_messages! %>
                               
                                   <div class="form-group">
-                                      <label class="col-lg-2 control-label">Descricao</label>
+                                      <label class="col-lg-2 control-label">Descrição</label>
                                       <div class="col-lg-10">
                                           <textarea name="" id="" class="form-control" cols="30" rows="10"></textarea>
                                       </div>
@@ -24,19 +24,19 @@
                                       </div>
                                   </div>
                                   <div class="form-group">
-                                      <label class="col-lg-2 control-label">Aniversario</label>
+                                      <label class="col-lg-2 control-label">Data de Nascimento</label>
                                       <div class="col-lg-6">
                                           <%= f.text_field :birthday, :label => "Date",  :class => ['datepicker','form-control'] %>
                                       </div>
                                   </div>
                                   <div class="form-group">
-                                      <label class="col-lg-2 control-label">Occupacao</label>
+                                      <label class="col-lg-2 control-label">Occupação</label>
                                       <div class="col-lg-6">
                                           <input type="text" class="form-control" id="occupation" placeholder=" ">
                                       </div>
                                   </div>
                                   <div class="form-group">
-                                      <label class="col-lg-2 control-label">Email</label>
+                                      <label class="col-lg-2 control-label">E-mail</label>
                                       <div class="col-lg-6">
                                           <%= f.email_field :email, :autofocus => true,:class => "form-control" %>
                                       </div>
@@ -48,7 +48,7 @@
                                       </div>
                                   </div>
                                   <div class="form-group">
-                                      <label class="col-lg-2 control-label">Website URL</label>
+                                      <label class="col-lg-2 control-label">URL do Website</label>
                                       <div class="col-lg-6">
                                           <input type="text" class="form-control" id="url" placeholder="http://www.demowebsite.com ">
                                       </div>
@@ -65,7 +65,7 @@
                   <section>
                      <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put ,:class=>"form-horizontal"}) do |f| %>
                           <div class="panel panel-primary">
-                              <div class="panel-heading"> Sets New Password &amp; Avatar</div>
+                              <div class="panel-heading"> Mudar a palavra passe e Avatar</div>
                               <div class="panel-body">
                                   
                                   
@@ -124,6 +124,40 @@
 
 
                           <% end %>
+                      </section>
+
+                      <section>
+                          <div class="panel panel-primary">
+                              
+                          <div class="panel-heading"> Conecções exteriores </div>
+                               <div class="panel-body">
+                                  <div class="form-group">
+                                     <div class="social-box">
+                                        <% provider_count = 0 %>
+                                        <% if !current_user.has_provider("facebook")%>
+                                        <div class="row mg-btm">
+                                           <div class="col-lg-6">
+                                              <div class="col-md-12"><%= link_to "<i class=\"icon-facebook\" style=\"margin-right: 5px; color: white;\"></i>Connectar com o Facebook".html_safe , "/auth/facebook",:class=>"popup btn btn-facebook btn-block",:style=>"color:white;" %></div>
+                                           </div>
+                                        </div>
+                                        <% else provider_count += 1 %>
+                                        <% end %>
+                                        <% if !current_user.has_provider("twitter")%>
+                                        <div class="row mg-btm" style="margin-top: 5px; margin-bottom: 10px">
+                                           <div class="col-lg-6">
+                                              <div class="col-md-12"><%= link_to "<i class=\"icon-twitter\" style=\"margin-right: 5px; color: white;\"></i>Connectar com o Twitter".html_safe , "/auth/twitter" ,:class=>"popup btn btn-twitter btn-block" ,:style=>"color:white;" %></div>
+                                           </div>
+                                        </div>
+                                        <% else provider_count += 1 %>
+                                        <% end %>
+                                        <% if !(provider_count < 2)%>
+                                           Não há mais connecções exteriores a adicionar.
+                                        <% end %>
+                                     </div>
+                                  </div>
+                                 
+                              </div>
+                          </div>
                       </section>
 
                       <section>
