--- a/app/assets/stylesheets/theme.css
+++ b/app/assets/stylesheets/theme.css
@@ -278,6 +278,16 @@ color:  #293a49;
 }
 }
 
+/******SIDEBAR RIGHT**********/
+
+#pubAD{
+  /*width: 100%;*/
+  max-width: 100%;
+  max-height: 100px;
+
+}
+
+
 /******THUMBNAILS**********/
 
 
