--- a/app/views/layouts/_sidebar_left.html.erb
+++ b/app/views/layouts/_sidebar_left.html.erb
@@ -25,7 +25,7 @@
     <div class="btn-group" style="width: 100%">
       <a class="btn dropdown-toggle btn-info" data-toggle="dropdown" href="#" style="width: 100%">
         Mercado
-        <span class="icon-shopping-cart"></span>
+        
       </a>
       <ul class="dropdown-menu">
         <li><%= link_to "Ver Todos".html_safe , ads_path %></li>
@@ -39,7 +39,7 @@
     <div class="btn-group" style="padding-bottom:5px;padding-top:5px;width: 100%">
       <a class="btn dropdown-toggle btn-success" data-toggle="dropdown" href="#" style="width: 100%">
         Eventos
-        <span class="icon-flag"></span>
+        
       </a>
       <ul class="dropdown-menu">
         <li><%= link_to "Ver Todos".html_safe, ads_path %></li>
@@ -52,7 +52,7 @@
 
     <div class="btn-group" style="width: 100%">
       <a class="btn dropdown-toggle btn-warning" data-toggle="dropdown" href="#" style="width: 100%">Academia
-        <span class=" icon-user"></span></a>
+        
       <ul class="dropdown-menu">
         <li><%= link_to "Entrar na Academia".html_safe, academy_path %></li>
 
@@ -70,7 +70,7 @@
 <!-- Admin Acess-->
 <div class="panel panel-default">
   <div class="panel-body">
-    <div>
+    <div style="text-align: center">
         <% if user_signed_in? %>
         <a class="btn dropdown-toggle btn-danger" href="/admin/ads" style="width: 100%;">Danger-Zone</a>
         <% else %>
@@ -80,12 +80,16 @@
   </div>
 </div>
 
+<!--Painel de Filtros-->
 <div class="panel panel-default">
   <div class="panel-body">
 
+    <ul style="margin-left: -30px; line-height: 28px;">
     <!--Filtros-->
     <% if user_signed_in? && controller_name=="ads"%>
         <legend>Filtros</legend>
+
+        
         <li>
           <a href="#collapseCategory" data-toggle="collapse" data-parent="#accordion">Categoria<b class="caret"></b></a>
         </li>
@@ -93,36 +97,41 @@
         <!--Formulário-->
         <%= form_tag ads_path ,:method => :get do%>
 
-            <div id="collapseCategory" class="panel-collapse collapse">
-              <ul>
+          <div id="collapseCategory" class="panel-collapse collapse">
+            <ul>
 
-                <% @categories.each do |cat| %>
-                    <li>
-                      <%= check_box_tag "search[]","cat:#{cat.id}" %>
-                      <%= cat.name %>
-                    </li>
-                <% end %>
-              </ul>
-            </div>
+              <% @categories.each do |cat| %>
+                  <li>
+                    <%= check_box_tag "search[]","cat:#{cat.id}" %>
+                    <%= cat.name %>
+                  </li>
+              <% end %>
+            </ul>
+          </div>
 
-            <li>
-              <a href="#collapseCity" data-toggle="collapse" data-parent="#accordion">Cidade<b class="caret"></b></a>
-            </li>
+          <li>
+            <a href="#collapseCity" data-toggle="collapse" data-parent="#accordion">Cidade<b class="caret"></b></a>
+          </li>
 
-            <div id="collapseCity" class="panel-collapse collapse">
-              <ul>
-                <% @cities.each do |city| %>
-                    <li>
-                      <%= check_box_tag "search[]","city:#{city.id}"%>
-                      <%= city.city %>
-                    </li>
-                <% end %>
-              </ul>
-            </div>
+          <div id="collapseCity" class="panel-collapse collapse">
+            <ul>
+              <% @cities.each do |city| %>
+                  <li>
+                    <%= check_box_tag "search[]","city:#{city.id}"%>
+                    <%= city.city %>
+                  </li>
+              <% end %>
+            </ul>
+          </div>
+          <br>
+          <li style="text-align: center; ">
             <%= submit_tag "Filtrar" %>
+          </li>
         <% end %>
         <!-- END FORMULARIO-->
+        
     <% end %>
+    </ul>
     <!-- END FILTERS -->
   </div>
 </div>
