--- a/app/views/devise/mailer/confirmation_instructions.html.erb
+++ b/app/views/devise/mailer/confirmation_instructions.html.erb
@@ -1,5 +1,5 @@
-<p>Welcome <%= @email %>!</p>
+<p>Bem vindo <%= @email %>!</p>
 
-<p>You can confirm your account email through the link below:</p>
+<p>Podes confirmar o teu email no link abaixo:</p>
 
-<p><%= link_to 'Confirm my account', confirmation_url(@resource, :confirmation_token => @resource.confirmation_token) %></p>
+<p><%= link_to 'Confimar a minha conta', confirmation_url(@resource, :confirmation_token => @resource.confirmation_token) %></p>
