--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -1,8 +1,8 @@
-<p>Hello <%= @resource.email %>!</p>
+<p>Olá <%= @resource.email %>!</p>
 
-<p>Someone has requested a link to change your password. You can do this through the link below.</p>
+<p>Alguem pediu um link para alterar a sua password. Podes fazer isso no link abaixo.</p>
 
-<p><%= link_to 'Change my password', edit_password_url(@resource, :reset_password_token => @resource.reset_password_token,:host => "whatever.com") %></p>
+<p><%= link_to 'Alterar password', edit_password_url(@resource, :reset_password_token => @resource.reset_password_token,:host => "whatever.com") %></p>
 
-<p>If you didn't request this, please ignore this email.</p>
-<p>Your password won't change until you access the link above and create a new one.</p>
+<p>Se não pediste isto podes ignorar este email</p>
+<p>A tua password não alterará a não ser que o alteres a partir do link</p>
