--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -40,7 +40,7 @@
                                               <p><span>Ocupação </span>: UI Designer</p>
                                           </div>
                                           <div class="bio-row">
-                                              <p><span>E-mail </span>: <%= @user.email %></p>
+                                              <p><span>Email </span>: <%= @user.email %></p>
                                           </div>
                                           <div class="bio-row">
                                               <p><span>Membro desde </span>: <%= @user.created_at %></p>
