--- a/app/views/devise/mailer/unlock_instructions.html.erb
+++ b/app/views/devise/mailer/unlock_instructions.html.erb
@@ -1,7 +1,7 @@
-<p>Hello <%= @resource.email %>!</p>
+<p>Olá <%= @resource.email %>!</p>
 
-<p>Your account has been locked due to an excessive number of unsuccessful sign in attempts.</p>
+<p>A tua conta foi tracada devido a excesso de tentativas falhadas de login</p>
 
-<p>Click the link below to unlock your account:</p>
+<p>Clica no link abaixo para destrancar a tua conta</p>
 
-<p><%= link_to 'Unlock my account', unlock_url(@resource, :unlock_token => @resource.unlock_token) %></p>
+<p><%= link_to 'Destrancar a minha conta', unlock_url(@resource, :unlock_token => @resource.unlock_token) %></p>
