--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -36,7 +36,7 @@
                                       </div>
                                   </div>
                                   <div class="form-group">
-                                      <label class="col-lg-2 control-label">E-mail</label>
+                                      <label class="col-lg-2 control-label">Email</label>
                                       <div class="col-lg-6">
                                           <%= f.email_field :email, :autofocus => true,:class => "form-control" %>
                                       </div>
@@ -65,19 +65,19 @@
                   <section>
                      <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put ,:class=>"form-horizontal"}) do |f| %>
                           <div class="panel panel-primary">
-                              <div class="panel-heading"> Mudar a palavra passe e Avatar</div>
+                              <div class="panel-heading"> Mudar a password e Avatar</div>
                               <div class="panel-body">
                                   
                                   
                                       <div class="form-group">
-                                          <label class="col-lg-2 control-label">Nova Palavra Passe</label>
+                                          <label class="col-lg-2 control-label">Nova Password</label>
                                           <div class="col-lg-6">
                                               
                                               <%= f.password_field :password, :autocomplete => "off" ,:class=>"form-control",:id=>"n-pwd",:placeholder=>" " %>
                                           </div>
                                       </div>
                                       <div class="form-group">
-                                          <label class="col-lg-2 control-label">Rescreva Nova Palavra Passe</label>
+                                          <label class="col-lg-2 control-label">Rescreva Nova Password</label>
                                           <div class="col-lg-6">
                                                <%= f.password_field :password_confirmation ,:class=>"form-control",:id=>"rt-pwd",:placeholder=>" " %>
                                           </div>
@@ -102,7 +102,7 @@
                           <div class="panel-heading"> Salvar </div>
                                <div class="panel-body">
                                   <div class="form-group">
-                                          <label class="col-lg-2 control-label">Palavra Passe actual</label>
+                                          <label class="col-lg-2 control-label">Password actual</label>
                                           <div class="col-lg-6">
                                               
                                                <%= f.password_field :current_password ,:class=>"form-control",:id=>"c-pwd",:placeholder=>" " %>
