--- a/app/assets/stylesheets/theme.css
+++ b/app/assets/stylesheets/theme.css
@@ -513,3 +513,9 @@ legend+.control-group{margin-top:18px;-webkit-margin-top-collapse:separate;}
 .form-horizontal .form-actions{padding-left:160px;}
 
 .input-xlarge{width:270px;}
+
+
+
+/************* THUMBS for answers**********/
+
+
