--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -19,7 +19,7 @@
       <tr>
         <td><%= user.name %></td>
         <td><%= user.email %></td>
-        <td><%= user.city.city %></td>
+        <td><%= user %></td>
         <td></td>
         <td><%= link_to 'Ver', admin_user_path(user) %></td>
         <td><%= link_to 'Editar', edit_admin_user_path(user) %></td>
